microk8s/instanciamicrok8s.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  LlaveEc2:
    Description: "Llave del servidor"
    Type: String
    Default: KeyEc2CloudFormationVirginia
  EnvironmentName:
    Description: "A prefix for the resource names."
    Type: String
    Default: MiPrimerLabCFN
  TagVersion:
    Description: "Version tag snapd"
    Type: String
    Default: "v0.1.0"
  RpmVersion:
    Description: "Version rpm snapd"
    Type: String
    Default: "2.36.3-0"
Resources:
  Instancia01:
    Type: 'AWS::EC2::Instance'
    Properties: 
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AmazonLinux2]
      InstanceType: t2.medium
      InstanceInitiatedShutdownBehavior: terminate
      KeyName: !Ref LlaveEc2
      Monitoring: true
      #SubnetId: subnet-095799538e3a5008f #subnet por defecto
      SecurityGroupIds:
        - !Ref SecurityGroup01
      Tags:
        - Key: Name
          Value: !Sub "CDA - ${EnvironmentName}"
      UserData:
        Fn::Base64: !Sub | 
            #!/bin/bash -xe
            yum update -y
            yum install git -y
            yum install tree -y
            amazon-linux-extras install docker -y
            service docker start
            usermod -a -G docker ec2-user
            curl -L "https://github.com/docker/compose/releases/download/1.28.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            wget "https://github.com/albuild/snap/releases/download/v0.1.0/snap-confine-2.36.3-0.amzn2.x86_64.rpm" -P /root/Downloads
            wget "https://github.com/albuild/snap/releases/download/v0.1.0/snapd-2.36.3-0.amzn2.x86_64.rpm" -P /root/Downloads
            yum -y install "/root/Downloads/snap-confine-2.36.3-0.amzn2.x86_64.rpm" "/root/Downloads/snapd-2.36.3-0.amzn2.x86_64.rpm"
            systemctl enable --now snapd.socket
            systemctl enable --now /usr/lib/systemd/system/snapd.socket
            service snapd.socket start
            systemctl start snapd.seeded.service
            /usr/bin/snap install microk8s --classic
            usermod -a -G microk8s ec2-user
            #habilitamos el idioma del phyton
            export LC_ALL=en_US.utf-8
            export LANG=en_US.utf-8
            #instalamos microk8s
            /var/lib/snapd/snap/bin/microk8s status --wait-ready
            /var/lib/snapd/snap/bin/microk8s enable dns registry ingress helm3
            echo 'alias kubectl=microk8s.kubectl' >>~/.bashrc
            echo 'alias k=microk8s.kubectl' >>~/.bashrc
            alias kubectl=microk8s.kubectl
            alias k=microk8s.kubectl
            echo 'alias helm=microk8s.helm3' >>~/.bashrc
            alias helm=microk8s.helm3
            exec bash
    DependsOn:
      #- ElasticIP01
      - SecurityGroup01
  ElasticIP01: #elasticIP
    Type: 'AWS::EC2::EIP'
  ElasticIP01Assoc: #referencia del elasticIP con la EC2 instancia
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref Instancia01
      EIP: !Ref ElasticIP01
  SecurityGroup01:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: "Security group mi primera instancia"
      #VpcId: vpc-0af860bdb15f3c8e5 #vpc default
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8069
          ToPort: 8069
          CidrIp: 0.0.0.0/0

Mappings:
  RegionMap:
    us-east-1:
      AmazonLinux2: ami-047a51fa27710816e
      RegionAlias: "N. Virginia"
    us-west-2:
      AmazonLinux2: ami-0e999cbd62129e3b1
      RegionAlias: "Oregon"

Outputs:
  Instancia01:
    Description: "IntanciaId del EC2 - Instancia01"
    Value: !Ref Instancia01
    Export:
      Name: Instancia01
  EIPPublica:
    Description: "IP publica de la instancia"
    Value: !Ref ElasticIP01
    Export:
      Name: EIPPublica
